--- a/src/blocks/page/page.css
+++ b/src/blocks/page/page.css
@@ -1,12 +1,7 @@
 .page {
-  background-color: #000000;
   color: #ffffff;
   margin: 0 auto 0 auto;
   max-width: 880px;
+  min-height: 100vh;
   font-family: 'Inter', Arial, sans-serif;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-font-smoothing: antialiased;
-  -webkit-text-size-adjust: 100%;
-  -ms-text-size-adjust: 100%;
-  -moz-text-size-adjust: 100%; 
 }
