--- a/src/index.css
+++ b/src/index.css
@@ -44,3 +44,4 @@
 @import url(./blocks/popup/_type/popup_type_image.css);
 @import url(./blocks/popup/__button/_disabled/popup__button_disabled.css);
 @import url(./blocks/popup/__error/popup__error.css);
+@import url(./blocks/popup/__error/_active/popup__error_active.css);
